Cambio 1 de rutas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GymLife</title>
-        <link rel="stylesheet" href="../Segunda-Pagina-CSS/style/style.css">
-        <link rel="shortcut icon" href="../Segunda-Pagina-CSS/img/GymLife-icon.png">
+        <link rel="stylesheet" href="../Trabajo2-CSS/style/style.css">
+        <link rel="shortcut icon" href="../Trabajo2-CSS/img/GymLife-icon.png">
     </head>
     <body>
             
@@ -16,23 +16,23 @@
 
                 <div class="wrap-logo-header">
                     <div class="gym-logo-header">
-                        <img src="../Segunda-Pagina-CSS/img/GymLife-logo_header.png" width="100" alt="Image not found">
+                        <img src="../Trabajo2-CSS/img/GymLife-logo_header.png" width="100" alt="Image not found">
                     </div>
                 </div>
 
                 <div class="wrap-nav-header">
                     <nav class="nav-header">
                         <ul class="main-menu">
-                            <li class="menu-item"><a href="../Segunda-Pagina-CSS/index.html">Inicio</a></li>
+                            <li class="menu-item"><a href="../Trabajo2-CSS/index.html">Inicio</a></li>
                             <li class="menu-item">
                                 <div class="dropdown">
                                     <button class="dropbtn">Rutinas</button>
                                     <div class="dropdown-content">
-                                    <a href="../Segunda-Pagina-CSS/index/Rutina1.html">Push/Pull/Legs</a>
-                                    <a href="../Segunda-Pagina-CSS/index/Rutina2.html">Full Body</a>
+                                    <a href="../Trabajo2-CSS/index/Rutina1.html">Push/Pull/Legs</a>
+                                    <a href="../Trabajo2-CSS/index/Rutina2.html">Full Body</a>
                                 </div>
                             </li>
-                            <li class="menu-item"><a href="../Segunda-Pagina-CSS/index/Contacto.html">Contacto</a></li>
+                            <li class="menu-item"><a href="../Trabajo2-CSS/index/Contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -43,11 +43,11 @@
 
         <div class="main-body">
             <div class="main-body-item">
-                <img src="../Segunda-Pagina-CSS/img/gym-main_img.jpg" width="100%" alt="GYM HOME">
+                <img src="../Trabajo2-CSS/img/gym-main_img.jpg" width="100%" alt="GYM HOME">
                 <div class="main-caption main-label">
                     <h3 class="first-label">Gym Fitness Center</h3>
                     <h2 class="second-label">Crea tú mejor versión</h2>
-                    <a href="../Segunda-Pagina-CSS/index/Únete.html" id="btn">Únete a nosotros</a>
+                    <a href="../Trabajo2-CSS/index/Únete.html" id="btn">Únete a nosotros</a>
                 </div>
             </div>
         </div>
