--- a/index/Contacto.html
+++ b/index/Contacto.html
@@ -27,7 +27,7 @@
                 <div class="wrap-nav-header">
                     <nav class="nav-header">
                         <ul class="main-menu">
-                            <li class="menu-item"><a href="../index/index.html">Inicio</a></li>
+                            <li class="menu-item"><a href="../index.html">Inicio</a></li>
                             <li class="menu-item">
                                 <div class="dropdown">
                                     <button class="dropbtn">Rutinas</button>
