añadido de la hoja de estilos y float a una imagen

--- a/index/Únete.html
+++ b/index/Únete.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GymLife</title>
         <link rel="stylesheet" href="../style/style.css">
+        <link rel="stylesheet" href="../style/style2.css">  
         <link rel="shortcut icon" href="../img/GymLife-icon.png">
     </head>
     <body>
@@ -47,6 +48,7 @@
 
         <div class="forms">
             <form class="form-register">
+                <img src="../img/descarga.png" alt="">
                 <h4>Formulario de Registro</h4>
                 <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
                 <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus Apellidos">
