--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GymLife</title>
-        <link rel="stylesheet" href="../Trabajo2-CSS/style/style.css">
+        <link rel="stylesheet" href="../style/style.css">
+        <link rel="stylesheet" href="../style/style2.css">
         <link rel="shortcut icon" href="../Trabajo2-CSS/img/GymLife-icon.png">
     </head>
     <body>
