--- a/index/Rutina1.html
+++ b/index/Rutina1.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GymLife</title>
         <link rel="stylesheet" href="../style/style.css">
+        <link rel="stylesheet" href="../style/style2.css">
         <link rel="shortcut icon" href="../img/GymLife-icon.png">
     </head>
     <body>
