--- a/index/Contacto.html
+++ b/index/Contacto.html
@@ -47,7 +47,7 @@
         </header>
 
         <div class="forms">
-            <form class="form-register">
+            <form class="form-register" method="post">
                 <h4>Póngase en contacto con nosotros!</h4>
                 <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre y Apellidos">
                 <input class="controls" type="text" name="email" id="email" placeholder="Ingrese Correo Electrónico">
