--- a/index/Únete.html
+++ b/index/Únete.html
@@ -47,7 +47,7 @@
         </header>
 
         <div class="forms">
-            <form class="form-register">
+            <form class="form-register" method="post">
                 <img src="../img/descarga.png" alt="">
                 <h4>Formulario de Registro</h4>
                 <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
