--- a/index/Únete.html
+++ b/index/Únete.html
@@ -48,7 +48,7 @@
 
         <div class="forms">
             <form class="form-register" method="post">
-                <img src="../img/descarga.png" alt="">
+                <img src="../img/GymLife-icon.png" alt="">
                 <h4>Formulario de Registro</h4>
                 <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
                 <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus Apellidos">
