añadidio de ancho liquido

--- a/index/Únete.html
+++ b/index/Únete.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../style/style2.css">  
         <link rel="shortcut icon" href="../img/GymLife-icon.png">
     </head>
-    <body>
+    <body id="líquido">
             
         <div class="unete-img">
             <img src="../img/gym-unete_img.jpg" width="100%" alt="Image not found">
