ancho líquido parte 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../style/style2.css">
         <link rel="shortcut icon" href="../Trabajo2-CSS/img/GymLife-icon.png">
     </head>
-    <body>
+    <body id="fijo">
             
         <header class="main-header">
 
