añadido de ancho fijo index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body id="fijo">
             
-        <header class="main-header">
+        <header id="header-fijo" class="main-header">
 
             <div class="header-wrap">
 
