--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>GymLife</title>
         <link rel="stylesheet" href="./style/style.css">
         <link rel="stylesheet" href="./style/style2.css">
-        <link rel="shortcut icon" href="../Trabajo2-CSS/img/GymLife-icon.png">
+        <link rel="shortcut icon" href="./img/GymLife-icon.png">
     </head>
     <body id="fijo">
             
@@ -17,23 +17,29 @@
 
                 <div class="wrap-logo-header">
                     <div class="gym-logo-header">
-                        <img src="../Trabajo2-CSS/img/GymLife-logo_header.png" width="100" alt="Image not found">
+                        <img src="./img/GymLife-logo_header.png" width="100" alt="Image not found">
                     </div>
                 </div>
 
                 <div class="wrap-nav-header">
                     <nav class="nav-header">
+                        <input type="checkbox" id="check">
+                        <label for="check" class="checkbtn">
+                            <i class="toggle-menu">
+                                <img src="./img/menú desplegable.png">
+                            </i>
+                        </label>
                         <ul class="main-menu">
-                            <li class="menu-item"><a href="../Trabajo2-CSS/index.html">Inicio</a></li>
+                            <li class="menu-item"><a href="./index.html">Inicio</a></li>
                             <li class="menu-item">
                                 <div class="dropdown">
                                     <button class="dropbtn">Rutinas</button>
                                     <div class="dropdown-content">
-                                    <a href="../Trabajo2-CSS/index/Rutina1.html">Push/Pull/Legs</a>
-                                    <a href="../Trabajo2-CSS/index/Rutina2.html">Full Body</a>
+                                    <a href="./index/Rutina1.html">Push/Pull/Legs</a>
+                                    <a href="./index/Rutina2.html">Full Body</a>
                                 </div>
                             </li>
-                            <li class="menu-item"><a href="../Trabajo2-CSS/index/Contacto.html">Contacto</a></li>
+                            <li class="menu-item"><a href="./index/Contacto.html">Contacto</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -44,11 +50,11 @@
 
         <div class="main-body">
             <div class="main-body-item">
-                <img src="../Trabajo2-CSS/img/gym-main_img.jpg" width="100%" alt="GYM HOME">
+                <img src="./img/gym-main_img.jpg" width="100%" alt="GYM HOME">
                 <div class="main-caption main-label">
                     <h3 class="first-label">Gym Fitness Center</h3>
                     <h2 class="second-label">Crea tú mejor versión</h2>
-                    <a href="../Trabajo2-CSS/index/Únete.html" id="btn">Únete a nosotros</a>
+                    <a href="./index/Únete.html" id="btn">Únete a nosotros</a>
                 </div>
             </div>
         </div>
