--- a/index/Rutina1.html
+++ b/index/Rutina1.html
@@ -27,6 +27,12 @@
 
                 <div class="wrap-nav-header">
                     <nav class="nav-header">
+                        <input type="checkbox" id="check">
+                        <label for="check" class="checkbtn">
+                            <i class="toggle-menu">
+                                <img src="../img/menú desplegable.png">
+                            </i>
+                        </label>
                         <ul class="main-menu">
                             <li class="menu-item"><a href="../index.html">Inicio</a></li>
                             <li class="menu-item">
