--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="./img/gym-main_img.jpg" width="100%" alt="GYM HOME">
                 <div class="main-caption main-label">
                     <h3 class="first-label">Gym Fitness Center</h3>
-                    <h2 class="second-label">Crea tú mejor versión</h2>
+                    <h2 id="item2" class="second-label">Crea tú mejor versión</h2>
                     <a href="./index/Únete.html" id="btn">Únete a nosotros</a>
                 </div>
             </div>
