propiedad hijo directo

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="main-body-item">
                 <img src="./img/gym-main_img.jpg" width="100%" alt="GYM HOME">
                 <div class="main-caption main-label">
-                    <h3 class="first-label">Gym Fitness Center</h3>
+                    <h2 class="first-label">Gym Fitness Center</h3>
                     <h2 id="item2" class="second-label">Crea tú mejor versión</h2>
-                    <a href="./index/Únete.html" id="btn">Únete a nosotros</a>
+                    <h3><a href="./index/Únete.html" id="btn">Únete a nosotros</a><h3>
                 </div>
             </div>
         </div>
