--- a/index/Contacto.html
+++ b/index/Contacto.html
@@ -55,7 +55,7 @@
         <div class="forms">
             <form class="form-register" method="post">
                 <p></p>
-                <h4>Póngase en contacto con nosotros!</h4>
+                <h4>póngase en contacto con nosotros!</h4>
                 <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre y Apellidos">
                 <input class="controls" type="text" name="email" id="email" placeholder="Ingrese Correo Electrónico">
                 <input class="controls-mesage" type="text" name="mensaje" id="mensaje" placeholder="Mensaje">
